Backend: Maboresho mengi kwenye controllers, models, services na config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,25 @@
+# Jina la Application
 spring.application.name=sign-learning-system
 
+# Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/sign_language_system
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# Hibernate Settings
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.format_sql=true
+
+# Ruhusu file kubwa kupakiwa (mpaka 100MB)
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
+
+# Folder la kuhifadhi video zilizopakiwa (ndani ya root folder ya project)
+upload.path=uploads/
+
+# Ruhusu backend ipatikane kwa simu kwenye mtandao huo huo (React Native support)
+server.address=0.0.0.0
+server.port=8080
