Implemented lesson upload, improved authentication, and added teacher/student assessment features

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,8 +17,8 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
 
-# Folder la kuhifadhi video zilizopakiwa (ndani ya root folder ya project)
-upload.path=uploads/
+# Absolute path ya kuhifadhi picha/video kwenye Desktop ya lenovo
+upload.path=C:/Users/lenovo/Desktop/uploads/
 
 # Ruhusu backend ipatikane kwa simu kwenye mtandao huo huo (React Native support)
 server.address=0.0.0.0
